--- a/src/deployment.yaml
+++ b/src/deployment.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: pyflask_api-service
+  name: pyflask-service
 spec:
   selector:
-    app: pyflask_api
+    app: pyflask
   ports:
   - protocol: "TCP"
     port: 6000
@@ -15,19 +15,19 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: pyflask_api
+  name: pyflask
 spec:
   selector:
     matchLabels:
-      app: pyflask_api
+      app: pyflask
   replicas: 2
   template:
     metadata:
       labels:
-        app: pyflask_api
+        app: pyflask
     spec:
       containers:
-      - name: pyflask_api
+      - name: pyflask
         image: piyush9090/pyflask_api
         imagePullPolicy: Always
         ports:
